# soundations

./: .client.http  .env.sample  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc.cjs  Caddyfile  Dockerfile  Dockerfile.builder  README.md  SpotifyCrawler.py  dataset_v0.csv  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json
.github/workflows/: ci.yml  lint.yml
snd-client/: index.html  package.json  vite.config.ts
snd-client/src/: app-context.ts  app-effects.ts  app-services.ts  app-state.ts  app.tsx  index.css
snd-client/src/components/: button.tsx  dialog-root.tsx  input.tsx  layout.tsx  track-player.tsx  (+3 more)
snd-proxy/: Dockerfile
snd-server/: Dockerfile  Dockerfile.prod  Pipfile  app.py  cli.py  context.py  data_transformer.py  genres_classificator.py  main.py  recommendation_engine.py  requirements.txt  spotify_crawler.py
snd-server-api-client/: SoundationsApiClient.ts  index.ts
snd-server-api-client/models/: Body_login_for_access_token.ts  RecommendedTrack.ts  SoundationsTrack.ts  SpotifyApiAlbum.ts  SpotifyApiArtist.ts  SpotifyApiImage.ts  SpotifyApiTrack.ts  TokenRequestForm.ts  TokenRequestPayload.ts  TrackRecommendationsItem.ts  TracksRecommendationsResponse.ts  TracksSearchResponse.ts  User.ts  UserTrackSearchPrompt.ts
snd-server-api-client/services/: DefaultService.ts  HealthService.ts  TracksService.ts  UsersService.ts
snd-server/mappers/: soundations.py
snd-server/migrations/: 000_create_users.sql  001_create_tracks.sql  002_create_search_history.sql
snd-server/models/: error.py  request_forms.py  search_config.py  soundations.py  spotify.py  track.py  users.py
snd-server/routes/: health.py  tracks.py  users.py
snd-server/services/: authorization_service.py  config.py  search_history.py  sounds_storage.py  spotify_api.py  spotify_crawler.py  sqlite_storage.py  thread_pool.py  tracer.py  track_service.py  users_storage.py
(+32 files in other folders)
