[tool.pyright]
include = ["snd-server"]

[tool.poetry]
name = "soundations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "0.17.0"
anyio = "3.6.1"
click = "8.1.3"
databases = "0.6.1"
fastapi = "0.85.0"
greenlet = "1.1.3"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
nodeenv = "1.7.0"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
pyyaml = "6.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.41"
starlette = "0.20.4"
typing-extensions = "4.4.0"
uvicorn = "0.18.3"
uvloop = "0.17.0"
watchfiles = "0.17.0"
websockets = "10.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.275"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
