[tool.pyright]
include = ["snd-server"]

[tool.poetry]
name = "soundations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.18.0"
anyio = "^3.6.2"
click = "^8.1.3"
databases = "^0.7.0"
fastapi = "^0.92.0"
greenlet = "^2.0.2"
h11 = "^0.14.0"
httptools = "^0.5.0"
idna = "^3.4"
nodeenv = "^1.7.0"
pydantic = "^1.10.5"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
sniffio = "^1.3.0"
starlette = "^0.25.0"
typing-extensions = "^4.5.0"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
watchfiles = "^0.18.1"
websockets = "^10.4"
pandas = "^1.5.3"
requests = "^2.28.2"
result = "^0.9.0"
scikit-learn = "^1.2.1"
httpx = "^0.23.3"
joblib = "^1.2.0"
opentelemetry-api = "^1.16.0"
opentelemetry-sdk = "^1.16.0"
opentelemetry-exporter-otlp-proto-http = "^1.16.0"
opentelemetry-instrumentation-fastapi = "^0.37b0"
opentelemetry-instrumentation-requests = "^0.37b0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
